--- a/app/templates/experience/show/tree.hbs
+++ b/app/templates/experience/show/tree.hbs
@@ -1,6 +1,6 @@
 <AuToolbar @border="bottom" @size="medium">
   <AuToolbarGroup>
-    <AuHeading @level="2" @skin="5">
+    <AuHeading @level="2" @skin="5" class="au-u-limit-text">
       {{this.model.title}}
     </AuHeading>
   </AuToolbarGroup>
