--- a/app/templates/experience/show.hbs
+++ b/app/templates/experience/show.hbs
@@ -10,10 +10,10 @@
           </AuLink>
           </li>
           <li class="au-c-list-horizontal__item">
-            <LinkTo class="au-c-link au-c-link--secondary" @route="poi.show.experiences.index" @model={{@model.pointOfInterest.id}}>{{@model.pointOfInterest.label}}</LinkTo>
+            <LinkTo class="au-c-link au-c-link--secondary au-u-limit-breadcrumb" @route="poi.show.experiences.index" @model={{@model.pointOfInterest.id}}>{{@model.pointOfInterest.label}}</LinkTo>
           </li>
           <li class="au-c-list-horizontal__item">
-            <strong>
+            <strong class="au-u-limit-breadcrumb">
               {{@model.title}}
             </strong>
           </li>
