--- a/app/templates/poi/edit.hbs
+++ b/app/templates/poi/edit.hbs
@@ -9,7 +9,7 @@
          </AuLink>
         </li>
         <li class="au-c-list-horizontal__item">
-          <LinkTo @route="poi.show.experiences.index" @model={{@model}} class="au-c-link au-c-link--secondary">
+          <LinkTo @route="poi.show.experiences.index" @model={{@model}} class="au-c-link au-c-link--secondary au-u-limit-breadcrumb">
             {{@model.label}}
           </LinkTo>
         </li>
