--- a/app/templates/poi/show.hbs
+++ b/app/templates/poi/show.hbs
@@ -9,7 +9,7 @@
          </AuLink>
         </li>
         <li class="au-c-list-horizontal__item">
-          <strong>
+          <strong class="au-u-limit-breadcrumb">
             {{@model.label}}
           </strong>
         </li>
