Place image uploader at bottom of page
This is waiting for a more sensible design.  Any more sensible
design.

--- a/app/templates/experience/show.hbs
+++ b/app/templates/experience/show.hbs
@@ -32,5 +32,12 @@
       </AuToolbarGroup>
     </AuToolbar>
     {{outlet}}
+    {{#async-await @model.pointOfInterest as |poi|}}
+      <h1>Images</h1>
+      <ListImages @poi={{poi}} @height={{200}}/>
+      <UploadImage @poi={{poi}}/>
+    {{else}}
+      ... loading ...
+    {{/async-await}}
   </div>
 </div>
