--- a/app/components/list-images.hbs
+++ b/app/components/list-images.hbs
@@ -1,4 +1,4 @@
-{{#each @poi.files as |image|}}
+{{#each @poi.images as |image|}}
   <VoMuFileCard @file={{image}} @onDelete={{this.removeFile}}/>
   <img src="/images/{{image.id}}?height={{@height}}" alt="{{image.label}}"/>
 {{/each}}
