--- a/app/templates/experience/show.hbs
+++ b/app/templates/experience/show.hbs
@@ -33,9 +33,12 @@
     </AuToolbar>
     {{outlet}}
     {{#async-await @model.pointOfInterest as |poi|}}
-      <h1>Images</h1>
-      <ListImages @poi={{poi}} @height={{200}}/>
-      <UploadImage @poi={{poi}}/>
+
+      <div class='toevla-list-images'>
+        <h1>Images</h1>
+        <UploadImage @poi={{poi}}/>
+        <ListImages @poi={{poi}} @height={{100}}/>
+      </div>
     {{else}}
       ... loading ...
     {{/async-await}}
