draft image upload styling

--- a/app/components/upload-image.hbs
+++ b/app/components/upload-image.hbs
@@ -1,1 +1,1 @@
-<VoMuFileDropzone @onFinishUpload={{this.uploaded}} @maxFileSizeMB="1024"/><br>
+<VoMuFileDropzone @onFinishUpload={{this.uploaded}} @maxFileSizeMB="1024"/>
