--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -82,6 +82,7 @@
 @import "project/c-action-sidebar";
 @import "project/c-tree";
 @import "project/c-toggle";
+@import "project/c-upload";
 
 
 // UTILITIES
