--- a/app/templates/experience/show.hbs
+++ b/app/templates/experience/show.hbs
@@ -34,13 +34,14 @@
     {{outlet}}
     {{#async-await @model.pointOfInterest as |poi|}}
 
-      <div class='toevla-list-images'>
-        <h1>Images</h1>
-        <UploadImage @poi={{poi}}/>
-        <ListImages @poi={{poi}} @height={{100}}/>
-      </div>
+    <div class="au-c-upload-box">
+      <AuHeading @level="2" @skin="5" class="au-u-margin-bottom-small">Foto's</AuHeading>
+      <UploadImage @poi={{poi}}/>
+      <ListImages @poi={{poi}} @height={{100}}/>
+    </div>
+
     {{else}}
-      ... loading ...
+      <AuLoader />
     {{/async-await}}
   </div>
 </div>
