--- a/app/templates/experience/show/tree.hbs
+++ b/app/templates/experience/show/tree.hbs
@@ -12,6 +12,16 @@
         {{#each this.sortedNodes as |node|}}
           <Tree::Node @node={{node}} @experience={{this.experience}} class="au-c-tree__item" />
         {{/each}}
+
+        {{#async-await this.experience.pointOfInterest as |poi|}}
+          <div class="au-c-upload-box">
+          <AuHeading @level="2" @skin="5" class="au-u-margin-bottom-small">Foto's</AuHeading>
+          <UploadImage @poi={{poi}}/>
+          <ListImages @poi={{poi}} @height={{100}}/>
+          </div>
+        {{else}}
+          <AuLoader />
+        {{/async-await}}
       </ul>
     </div>
     <div class="au-o-grid__item au-u-2-5 au-u-1-3@medium">
