added order to crud operations

--- a/app/templates/experience/show/files/edit.hbs
+++ b/app/templates/experience/show/files/edit.hbs
@@ -5,7 +5,9 @@
 <br>
 <img src="/images/{{@model.id}}?height=600" alt="{{@model.label}}"/>
 <br>
-Label: <Input id="site" type="text" @value={{@model.label}} @key-down={{this.updateLabel}}/>
+Label: <Input @type="text" @value={{@model.label}} @key-down={{this.updateLabel}}/>
+<br>
+Order: <Input @type="number" @value={{mut @model.order}}/>
 <br>
 <button type='button' {{on 'click' this.save}}>Opslaan</button><button type='button' {{on 'click' this.delete}}>Verwijderen</button>
 </div>
