--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -185,3 +185,12 @@
     width: 8.3333333% !important;
   }
 }
+
+.au-c-image {
+  border: .1rem solid $au-gray-200;
+
+  img {
+    display: block;
+    width: 100%;
+  }
+}
