--- a/app/templates/experience/show/files/edit.hbs
+++ b/app/templates/experience/show/files/edit.hbs
@@ -1,13 +1,34 @@
-<div class='toevla-image-edit'>
-<LinkTo @route='experience.show.tree' @model={{this.experience}}>Terug</LinkTo>
-<br>
-{{@model.id}}
-<br>
-<img src="/images/{{@model.id}}?height=600" alt="{{@model.label}}"/>
-<br>
-Label: <Input @type="text" @value={{@model.label}} @key-down={{this.updateLabel}}/>
-<br>
-Order: <Input @type="number" @value={{mut @model.order}}/>
-<br>
-<button type='button' {{on 'click' this.save}}>Opslaan</button><button type='button' {{on 'click' this.delete}}>Verwijderen</button>
+<div class="au-o-box">
+
+  <div class="au-o-grid">
+    <div class="au-o-grid__item au-u-1-3@small">
+      <div class="au-c-image">
+        <img src="/images/{{@model.id}}?height=600" alt="{{@model.label}}"/>
+      </div>
+    </div>
+    <div class="au-o-grid__item au-u-2-3@small">
+      <LinkTo @route='experience.show.tree' class="au-c-link au-c-link--secondary" @model={{this.experience}}>
+        <AuIcon @icon="arrow-left" @alignment="left" />
+        Terug
+      </LinkTo>
+      <div class="au-c-content au-u-margin-top-small">
+        <AuHeading @level="2" @skin="3">{{@model.id}}</AuHeading>
+        <p>
+          <AuLabel for="label">Label</AuLabel>
+          <Input id="label" @type="text" class="au-c-input au-c-input--block" @value={{@model.label}} @key-down={{this.updateLabel}}/>
+        </p>
+
+        <p>
+          <AuLabel for="order">Order</AuLabel>
+          <Input id="order" class="au-c-input au-c-input--block" @type="number" @value={{mut @model.order}}/>
+        </p>
+
+        <AuButtonGroup>
+          <AuButton type='button' {{on 'click' this.save}}>Opslaan</AuButton>
+          <AuButton @skin="secondary" type='button' {{on 'click' this.delete}}>Verwijderen</AuButton>
+        </AuButtonGroup>
+      </div>
+    </div>
+
+  </div>
 </div>
