--- a/app/styles/project/_c-upload.scss
+++ b/app/styles/project/_c-upload.scss
@@ -85,20 +85,20 @@
   img {
     position: relative;
     width: 100%;
-    height: 60px;
+    height: 70px;
     display: block;
     object-fit: cover;
   }
 
   @include mq(small) {
     img {
-      height: 70px;
+      height: 100px;
     }
   }
 
   @include mq(medium) {
     img {
-      height: 90px;
+      height: 110px;
     }
   }
 }
@@ -110,10 +110,14 @@
     top: $au-unit-tiny;
     right: $au-unit-tiny;
     z-index: 3;
+
+    color: $au-gray-200;
+    mix-blend-mode: multiply;
   }
 }
 
 .au-c-upload-download {
   padding:  $au-unit-tiny/2 $au-unit-tiny 0;
   margin-top: 0;
+
 }
