--- a/app/templates/components/vo-mu-file-card.hbs
+++ b/app/templates/components/vo-mu-file-card.hbs
@@ -14,12 +14,12 @@
       {{yield}}
     </div>
     {{#if downloadable}}
-      <p class="au-c-upload-download">
+      {{!-- <p class="au-c-upload-download">
         <a class="au-c-link" href="{{file.downloadLink}}" download="{{file.filename}}">
           <AuIcon @icon="download" @alignment="left" />
           Download
         </a>
-      </p>
+      </p> --}}
     {{/if}}
   </AuContent>
 </div>
