Support tracked visits for editors
The current approach shows the tracked visits based on content we
could find in the triplestore.  The implementation is silly and is
therefore too slow for an effective implementation.

--- a/app/components/tree/node.hbs
+++ b/app/components/tree/node.hbs
@@ -29,7 +29,7 @@
           </AuHeading>
         {{/if}}
 
-        <p class="au-c-tree__uri">{{@node.uri}}</p>
+        <p class="au-c-tree__uri">{{@node.uri}} -- {{this.treeNodeScore.id}} -- {{this.treeNodeScore.entryVisited}}</p>
       </div>
 
       <chart.if @state="error">
