--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,4 @@
-<AuMainHeader @homeRoute="poi" @appTitle="ToeVla widget & data entry">
+<AuMainHeader @homeRoute="login" @appTitle="Toegankelijk Vlaanderen" @contactRoute="contact">
   <LinkTo @route="poi" role="menuitem" class="au-c-button au-c-button--tertiary">
     <AuIcon @icon="login" @alignment="left" />Aanmelden
   </LinkTo>
