update text on login page and toegankelijkheidsverklaring

--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -14,7 +14,7 @@
               <h2 class="au-c-heading au-c-heading--4 au-u-margin-top">Toepassingen:</h2>
               <ul class="au-u-margin-top-small">
                 <li>Een gebruikvriendelijke widget met toegankelijkheidsinformatie</li>
-                <li>Als open data via een API <AuPill>Binnenkort</AuPill></li>
+                <li>Gelinkte open data via de API <AuPill>Binnenkort beschikbaar</AuPill></li>
               </ul>
               {{!-- <p>Lukt het aanmelden niet? Neem contact op met uw interne beheerder. Indien er zich een probleem voordoet, contacteer <a href="https://overheid.vlaanderen.be/ict/ict-diensten/gebruikersbeheer" class="au-c-link">gebruikersbeheer Vlaanderen</a>.</p>
               <p>Het aanmelden gebeurt in een pop-up; zorg dat de instellingen van uw browser correct staan indien deze niet verschijnt.</p> --}}
@@ -40,7 +40,7 @@
           <div class="au-o-grid__item au-u-1-2@small">
             <AuContent>
               <h3 class="au-c-heading au-c-heading--5">Foto's van de locatie</h3>
-              <p class="au-u-margin-top-small">Bekijk de toegankelijke eigenschappen van de locatie aan de hand van foto's.</p>
+              <p class="au-u-margin-top-small">Bekijk de toegankelijke eigenschappen van een locatie aan de hand van foto's.</p>
             </AuContent>
             <div class="au-c-image au-u-margin-top">
               <img src="/assets/images/toevla-mockup-photo.png" alt="Een foto in een slideshow waarop je de ingang ziet van een gebouw.">
