--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -62,7 +62,7 @@
                 <AuHeading @level="2" @skin="4">
                   Locaties
                 </AuHeading>
-                <p class="au-u-margin-top-tiny">Een overzicht van de locaties waarvoor we toegankelijkheidsinformatie beschikbaar hebben.</p>
+                <p class="au-u-margin-top-tiny">Een overzicht van de locaties waarvoor er toegankelijkheidsinformatie beschikbaar is.</p>
                 <p>
                   <LinkTo @route="login" class="au-c-button">
                     Zoek een locatie
@@ -80,7 +80,7 @@
                 </AuHeading>
                 <p class="au-u-margin-top-tiny">Hier vind je meer informatie over hoe je de widget kan integreren in je website.</p>
                 <p>
-                  <LinkTo @route="developers" class="au-c-button au-c-button--secondary">
+                  <LinkTo @route="developers.intro" class="au-c-button au-c-button--secondary">
                     Handleiding
                   </LinkTo>
                 </p>
