update developer documentation

--- a/app/templates/developers.hbs
+++ b/app/templates/developers.hbs
@@ -26,12 +26,12 @@
             <li class="au-c-list-navigation__item">
               <li class="au-c-list-navigation__item">
                 <AuNavigationLink @linkRoute="developers.intro">
-                  Integratie stappenplan
+                  Widget integreren
                 </AuNavigationLink>
               </li>
               <li class="au-c-list-navigation__item">
                 <AuNavigationLink @linkRoute="developers.styling">
-                  Styling
+                  Stijl aanpassen
                 </AuNavigationLink>
               </li>
               <li class="au-c-list-navigation__item">
