--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,8 +1,13 @@
 <div class="au-c-main-container__content au-c-main-container__content--scroll">
   <main id="content">
+    <AuContentHeader @titlePartOne="Vlaanderen" @titlePartTwo="is gelijke kansen">
+      <img sizes="50vw" src="/assets/images/toevla-header-1600.jpg" srcset="/assets/images/toevla-header-320.jpg 320w, /assets/images/toevla-header-1024.jpg 1024w, /assets/images/toevla-header-1600.jpg 1600w" alt="Foto van een parkeerplaats voor rolstoelgebruikers.">
+    </AuContentHeader>
     <section class="au-o-region-large">
       <div class="au-o-layout">
-        {{outlet}}
+        <AuHeading class="au-u-margin-bottom">Contact</AuHeading>
+        {{contact-form}}
+        <AuContactForm/>
       </div>
     </section>
   </main>
