--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -1,7 +1,7 @@
 <div class="au-c-main-container__content au-c-main-container__content--scroll">
   <main id="content">
     <AuContentHeader @titlePartOne="Vlaanderen" @titlePartTwo="is gelijke kansen">
-      <img sizes="50vw" src="/assets/images/toevla-header-1600.jpg" srcset="/assets/images/toevla-header-320.jpg 320w, /assets/images/toevla-header-1024.jpg 1024w, /assets/images/toevla-header-1600.jpg 1600w" alt="Foto van een laptop met daarop het vlaanderen logo.">
+      <img sizes="50vw" src="/assets/images/toevla-header-1600.jpg" srcset="/assets/images/toevla-header-320.jpg 320w, /assets/images/toevla-header-1024.jpg 1024w, /assets/images/toevla-header-1600.jpg 1600w" alt="Foto van een parkeerplaats voor rolstoelgebruikers.">
     </AuContentHeader>
 
     <section class="au-o-region-large">
