add location route, add doormat to pages

--- a/app/templates/developers/intro.hbs
+++ b/app/templates/developers/intro.hbs
@@ -1,7 +1,7 @@
 <AuHeading @level="2" @skin="2">Widget integreren</AuHeading>
 <p>Volg volgende stappen om de widget op je website te plaatsen.</p>
 <AuHeading @level="3" @skin="3">1. Zoek de identificatie code van jouw locatie</AuHeading>
-<p>Zoek op deze <a href="#!" class="au-c-link">overzichtpagina</a> de identificatie code van jouw locatie.</p>
+<p>Zoek op deze <LinkTo @route="locaties" class="au-c-link">overzichtpagina</LinkTo> de identificatie code van jouw locatie.</p>
 <AuHeading @level="3" @skin="3">2. Vul de widget code aan met jouw identificatie code</AuHeading>
 <p>Zet je identificatie code op de juiste plaats in de widget code. Je plaatst deze onder <CodeInline @code='data-resource=""' @language="html" />. De waarde is een combinatie van <CodeInline @code='http://toevla.org/id/' @language="html" /> + <strong>jouw locatie identificatie code</strong>.</p>
 <p>De volledige blok ziet er als volgt uit:</p>
