--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -64,7 +64,7 @@
                 </AuHeading>
                 <p class="au-u-margin-top-tiny">Een overzicht van de locaties waarvoor er toegankelijkheidsinformatie beschikbaar is.</p>
                 <p>
-                  <LinkTo @route="login" class="au-c-button">
+                  <LinkTo @route="locaties" class="au-c-button">
                     Zoek een locatie
                   </LinkTo>
                 </p>
