update e-mail address

--- a/app/templates/developers/styling.hbs
+++ b/app/templates/developers/styling.hbs
@@ -25,5 +25,5 @@
 </ul>
 
 <AuHeading @level="3" @skin="3">Vragen of hulp nodig?</AuHeading>
-<p>Indien je problemen tegenkomt bij het implementeren van de widget kan je ons contacteren op <a href="#!" class="au-c-link">toegankelijk@vlaanderen.be</a>.</p>
+<p>Indien je problemen tegenkomt bij het implementeren van de widget kan je ons contacteren op <a href="mailto:toevla@inter.vlaanderen" class="au-c-link">toevla@inter.vlaanderen</a>.</p>
 <p>Bugs of issues met de widget kan je melden op de <a href="https://github.com/lblod/frontend-toevla/issues" target="_blank" rel="noopener noreferrer" class="au-c-link">github pagina</a> van het project.</p>
