--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -30,7 +30,7 @@
         <div class="au-o-grid">
           <div class="au-o-grid__item au-u-1-2@small">
             <AuContent>
-              <h3 class="au-c-heading au-c-heading--5">Detailinformatie per categorie</h3>
+              <h3 class="au-c-heading au-c-heading--5">Detailinformatie per onderdeel van de locatie</h3>
               <p class="au-u-margin-top-small">We verzamelen informatie rond een vast aantal punten en geven deze weer in een overzichtelijke lijst.</p>
             </AuContent>
             <div class="au-c-image au-u-margin-top">
