--- a/app/templates/developers/plaatsing.hbs
+++ b/app/templates/developers/plaatsing.hbs
@@ -6,11 +6,11 @@
 <p>Om de vindbaarheid van informatie over toegankelijkheid makkelijker te maken is het goed om deze altijd onder de <CodeInline @code='/toegankelijkheid' @language="html" /> pagina te plaatsen op je website. Zo creëren we samen een makkelijk vindbare locatie op je site.</p>
 
 <AuHeading @level="3" @skin="3">Controleer op tegenstrijdige informatie</AuHeading>
-<p>Als je pagina reeds een pagina over toegankelijkheid hebt controleer je best even de correctheid van de informatie. Het kan zeer verwarrend overkomen indien de info op je pagina de widget informatie tegenspreekt. We streven ernaar om steeds de meest correct info te geven. Indien je toch een fout zou vinden in de widget kan je deze steeds doorgeven op <a href="#!" class="au-c-link">toegankelijk@vlaanderen.be</a>.</p>
+<p>Als je pagina reeds een pagina over toegankelijkheid hebt controleer je best even de correctheid van de informatie. Het kan zeer verwarrend overkomen indien de info op je pagina de widget informatie tegenspreekt. We streven ernaar om steeds de meest correct info te geven. Indien je toch een fout zou vinden in de widget kan je deze steeds doorgeven op <a href="mailto:toevla@inter.vlaanderen" class="au-c-link">toevla@inter.vlaanderen</a>.</p>
 
 <AuHeading @level="3" @skin="3">Controleer op dubbele informatie</AuHeading>
 <p>Met de widget geven we je een makkelijk overzicht van alle meetpunten rond toegankelijkheid. Het is dus niet nodig om deze nog eens te herhalen op je site. Je kan wel altijd een kort overzicht of visie tekst op deze pagina plaatsen om je engagement rond toegankelijkheid duidelijk te maken.</p>
 
 <AuHeading @level="3" @skin="3">Vragen of hulp nodig?</AuHeading>
-<p>Indien je problemen tegenkomt bij het implementeren van de widget kan je ons contacteren op <a href="#!" class="au-c-link">toegankelijk@vlaanderen.be</a>.</p>
+<p>Indien je problemen tegenkomt bij het implementeren van de widget kan je ons contacteren op <a href="mailto:toevla@inter.vlaanderen" class="au-c-link">toevla@inter.vlaanderen</a>.</p>
 <p>Bugs of issues met de widget kan je melden op de <a href="https://github.com/lblod/frontend-toevla/issues" target="_blank" rel="noopener noreferrer" class="au-c-link">github pagina</a> van het project.</p>
