--- a/app/templates/developers.hbs
+++ b/app/templates/developers.hbs
@@ -9,7 +9,7 @@
           </AuLink>
         </li>
         <li class="au-c-list-horizontal__item">
-          <strong>Voor developers</strong>
+          <strong>Voor ontwikkelaars</strong>
         </li>
       </ul>
     </AuToolbarGroup>
@@ -17,7 +17,7 @@
   <section class="au-o-region-large">
     <div class="au-o-layout au-o-layout--large">
       <AuContent>
-        <AuHeading>Voor developers</AuHeading>
+        <AuHeading>Voor ontwikkelaars</AuHeading>
       </AuContent>
       <hr class="au-c-hr">
       <div class="au-o-grid">
@@ -51,19 +51,19 @@
 
   <section class="au-o-region-large au-c-theme-gray-200">
       <div class="au-o-layout au-o-layout--large">
-        <AuHeading @level="2" @skin="3" class="au-u-margin-bottom">Integreer informatie over jouw toegankelijke locatie in je website.</AuHeading>
+        <AuHeading @level="2" @skin="3" class="au-u-margin-bottom">Integreer informatie over jouw toegankelijk gebouw in je website.</AuHeading>
         <div class="au-o-grid au-o-grid--small">
           <div class="au-o-grid__item au-u-1-2@small">
             <AuCard class="au-u-text-center">
               <AuBadge @icon="sitemap" @skin="brand" class="au-u-margin-right-none au-u-margin-bottom-small" />
               <AuContent>
                 <AuHeading @level="2" @skin="4">
-                  Locaties
+                  Gebouwen
                 </AuHeading>
-                <p class="au-u-margin-top-tiny">Een overzicht van de locaties waarvoor er toegankelijkheidsinformatie beschikbaar is.</p>
+                <p class="au-u-margin-top-tiny">Een overzicht van de gebouwen waarvoor er toegankelijkheidsinformatie beschikbaar is.</p>
                 <p>
                   <LinkTo @route="locaties" class="au-c-button">
-                    Zoek een locatie
+                    Zoek een gebouw
                   </LinkTo>
                 </p>
               </AuContent>
@@ -77,7 +77,7 @@
                 <AuHeading @level="2" @skin="4">
                   API
                 </AuHeading>
-                <p class="au-u-margin-top-tiny">Gebruik onze open en gelinkte data om je eigen applicatie of website te bouwen.</p>
+                <p class="au-u-margin-top-tiny">Gebruik onze open en gelinkte data om uw eigen applicatie of website te bouwen.</p>
                 <p>
                   <AuPill class="au-c-faded">Informatie over de API is binnenkort beschikbaar.</AuPill>
                 </p>
