--- a/app/templates/locaties.hbs
+++ b/app/templates/locaties.hbs
@@ -9,7 +9,7 @@
           </AuLink>
         </li>
         <li class="au-c-list-horizontal__item">
-          <strong>Locaties</strong>
+          <strong>Gebouwen</strong>
         </li>
       </ul>
     </AuToolbarGroup>
@@ -17,7 +17,7 @@
   <section class="au-o-region-large">
     <div class="au-o-layout au-o-layout--large">
       <AuContent>
-        <AuHeading>Locaties</AuHeading>
+        <AuHeading>Gebouwen</AuHeading>
       </AuContent>
       <hr class="au-c-hr">
       <div class="au-o-grid">
